--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ tags: [Hossain, Mohd, Faysal, electrical, engineering, blog, university, pennsyl
                         {{ post.date | date: "%d" }}
                     </span>
                     <span class="month-year">
-                        {{ post.date | date: "%B %Y" }}
+                        {{ post.date | date: "%Y %m" }}
                     </span>
                 </time>
             </span>
