--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 ---
-<h2>Posts by date</h2>
+<h2>Recent Post</h2>
 <div class="tags-expo">
   <div class="tags-expo-section">
     <ul class="tags-expo-posts">
